queries.txt
>>> from task1.models import News 
>>> News.objects.all()
<QuerySet []>
>>> News.objects.create(title='Исследование взаимосвязи гравитационных волн и квантовой запутанности', content='Ученые обнаружили удивительную связь между гравитационными волнами и квантовой запутанностью частиц. Новые эксперименты показывают, что гравитационные волны могут влиять на состояние квантово-запутанных систем, что открывает новые горизонты в понимании природы пространства-времени.') 
<News: Исследование взаимосвязи гравитационных волн и квантовой запутанности>
>>> News.objects.create(title='Тайны темной материи: новые данные меняют представление о Вселенной', content='Последние наблюдения за галактиками позволили ученым сделать неожиданное открытие: темная материя может взаимодействовать с обычной материей гораздо сильнее, чем предполагалось ранее. Эти результаты требуют пересмотра существующих теорий и могут изменить наше понимание устройства Вселенной.') 
<News: Тайны темной материи: новые данные меняют представление о Вселенной>
>>> News.objects.create(title='Искусственный интеллект предсказал существование неизвестной планеты в Солнечной системе', content='Используя сложные алгоритмы машинного обучения, ученые смогли обнаружить признаки существования девятой планеты в нашей Солнечной системе. Анализ данных телескопов показал аномалии в движении транснептуновых объектов, что подтверждает гипотезу о наличии крупного небесного тела за орбитой Нептуна.') 
<News: Искусственный интеллект предсказал существование неизвестной планеты в Солнечной системе>
>>> News.objects.create(title='Квантовый телепорт: прорыв в технологии передачи информации', content='Исследователи достигли значительного прогресса в области квантового телепортации. Экспериментально подтверждено, что квантовую информацию можно передавать на большие расстояния практически мгновенно, что открывает перспективы для создания сверхбыстрого и безопасного интернета будущего.')                                         
<News: Квантовый телепорт: прорыв в технологии передачи информации>
>>> News.objects.all()                                                                                                                                                                                                              
<QuerySet [<News: Исследование взаимосвязи гравитационных волн и квантовой запутанности>, <News: Тайны темной материи: новые данные меняют представление о Вселенной>, <News: Искусственный интеллект предсказал существование неизвестной планеты в Солнечной системе>, <News: Квантовый телепорт: прорыв в технологии передачи информации>]>
>>> News.objects.get(id=2).content
'Последние наблюдения за галактиками позволили ученым сделать неожиданное открытие: темная материя может взаимодействовать с обычной материей гораздо сильнее, чем предполагалось ранее. Эти результаты требуют пересмотра существующих теорий и могут изменить наше понимание устройства Вселенной.'
>>> News.objects.filter(content__icontains='учены')
<QuerySet [<News: Исследование взаимосвязи гравитационных волн и квантовой запутанности>, <News: Тайны темной материи: новые данные меняют представление о Вселенной>, <News: Искусственный интеллект предсказал существование неизвестной планеты в Солнечной системе>]>
>>> News.objects.filter(~content__icontains='учены').delete()
  File "<console>", line 1
    News.objects.filter(~content__icontains='учены').delete()
                        ^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
>>> News.objects.get(id=3).delete()                            
(1, {'task1.News': 1})
>>> News.objects.all()                                                                                                                                                                                                              
<QuerySet [<News: Исследование взаимосвязи гравитационных волн и квантовой запутанности>, <News: Тайны темной материи: новые данные меняют представление о Вселенной>, <News: Квантовый телепорт: прорыв в технологии передачи информации>]>
>>>
